# sabi-no-tenki

./: Cargo.toml  README.md  design-docs.md  schedule.txt
src/: api.rs  cache.rs  command_line.rs  error_strings.rs  get_path.rs  http_request.rs  input.rs  main.rs  output_generator.rs  prog_options.rs  utils.rs  weather_item.rs  weather_items.rs
src/api/: metaweather_query.rs  troposphere.rs  weatherstack.rs
src/input/: command_line.rs  config.rs  defaults.rs  error_strings.rs  parse_strings.rs
src/input/parse_strings/: parse_time.rs
