[package]
name = "tenki"
version = "0.1.0"
authors = ["Sam Swartzberg <me@samswartzberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
chrono = "~0.4.19"
strum = "~0.21"
strum_macros = "~0.21.1"
serde = "1.0"
serde_yaml = "0.8"
terminal_size = "0.1.17"
