[package]
name = "tenki"
version = "0.1.0"
authors = ["Sam Swartzberg <me@samswartzberg.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = samswartzberg.com
repository = https://github.com/SamuelSwartzberg/sabi-no-tenki
readme = "README.md"
keywords = ["weather", "CLI"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
chrono = "~0.4.19"
strum = "~0.21"
strum_macros = "~0.21.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "~1.0.59"
terminal_size = "0.1.17"
ureq = { version = "~2.1.1", features = ["json"] }
indexmap = { version = "~1.7.0", features = ["serde"] }